# pane

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  install.ps1  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: local-http-api.md  privacy.md  providers.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  httpapi.rs  lib.rs  pricing.rs  spend.rs
src-tauri/src/providers/: amp.rs  antigravity.rs  bedrock.rs  chutes.rs  claude.rs  codebuff.rs  codex.rs  copilot.rs  crof.rs  cursor.rs  deepgram.rs  deepseek.rs  devin.rs  elevenlabs.rs  grok.rs  hermes.rs  kilo.rs  kiro.rs  minimax.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  opencode.rs  openrouter.rs  poe.rs  venice.rs  vertexai.rs  warp.rs  zai.rs
